Two new destinations - Moscow and Yerevan - added

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,9 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+#moscow {
+    background-color: #8ed121;
+}
+#yerevan {
+    background-color: #4253ed;
+}
